[package]
name = "release"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "api_release"

[dependencies]
# utils
thiserror = "1.0.56"

# cmd
clap = { version = "4.4.18", features = ["derive"] }

# log
log = "0.4.20"
simple_logger = "4.3.3"

# crypto
sha2 = "0.10.8"

# encode
bincode = "1.3.3"
serde = { version =  "1.0.196", features = ["derive"]  }
flate2 = "1.0.28"
