[package]
name = "release"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "api_release"

[dependencies]
# utils
thiserror = "1.0.56"

# log
log = "0.4.20"
simple_logger = "4.3.3"

# crypto
sha2 = "0.10.8"

# encode
bincode = "1.3.3"
serde = { version =  "1.0.196", features = ["derive"]  }
flate2 = "1.0.28"

# thread
tokio = { version = "1.37.0", features = ["io-util", "fs", "macros", "time"], optional = true }
async-recursion = { version = "1.1.1", optional = true }

[dev-dependencies]
# cmd
clap = { version = "4.4.18", features = ["derive"] }

tokio = { version = "1.37.0", features = ["io-util", "fs", "rt", "rt-multi-thread", "macros", "time"]}

[features]
async = ["tokio", "async-recursion"]

[[example]]
name = "cli"
